Bug 1528865 - Change SwapChain's BufferUsage as to add DXGI_USAGE_SHADER_INPUT r=kvark

DXGI_USAGE_SHADER_INPUT is set for improving performance of copying from framebuffer to texture on intel gpu.

Differential Revision: https://phabricator.services.mozilla.com/D20622